haskell/katari-compiler/test/golden/expected/03-undefined-name.diagnostics.txt
error[K0102]: undefined name 'unknown_function'
  --> test/golden/cases/03-undefined-name.ktr (2:3)
  |
2 |   unknown_function()
  |   ^^^^^^^^^^^^^^^^
error[K0210]: type mismatch: 'unknown' is not a subtype of 'integer'
  --> test/golden/cases/03-undefined-name.ktr (1:25)
  |
1 | agent main() -> integer {
  |                         ^
